--- a/ServerAuth/plugin.yml
+++ b/ServerAuth/plugin.yml
@@ -1,7 +1,7 @@
 name: ServerAuth
 main: ServerAuth\ServerAuth
 version: "2.14"
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0]
 load: STARTUP
 author: EvolSoft
 description: The most advanced authentication plugin for PocketMine-MP.
